--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,105 +1,97 @@
 .nam-menu-grid {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .header .navbar-collapse {
-    flex-grow: inherit;
+  flex-grow: inherit;
 }
 
 .header .navbar-expand-lg .navbar-nav .nav-link {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    color: #212121;
-    margin: 0px 25px;
-    padding: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  color: #212121;
+  margin: 0px 25px;
+  padding: 0;
 }
 
 .header .navbar-expand-lg .navbar-nav .nav-link.active {
-    color: #AE7D3B;
-    font-weight: 600;
+  color: #3d68fe;
+  font-weight: 600;
 }
 
 .header .navbar-expand-lg .navbar-nav .nav-link:hover {
-    color: #AE7D3B;
+  color: #3d68fe;
 }
 
-
-.search-icon{
-    cursor: pointer;
+.search-icon {
+  cursor: pointer;
 }
 
+/****************************************** Media Query ******************************************/
 
+@media screen and (max-width: 991px) {
+  div#responsive-navbar-nav {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    background: #ffffff;
+    width: 300px;
+    height: auto !important;
+    display: block !important;
+    left: -350px;
+    z-index: 999999;
+    transition: all 0.5s;
+    border-right: 1px solid #f5f5f5;
+    box-shadow: 5px 5px 30px #00000033;
+  }
 
-  /****************************************** Media Query ******************************************/
+  div#responsive-navbar-nav.show {
+    left: 0;
+  }
 
+  .navbar-light .collapsed .navbar-toggler-icon {
+    background: url(../../assets/images/header/tab-collaps.svg) !important;
+    width: 32px;
+    height: 26px;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    opacity: 0.9;
+    display: block;
+  }
 
-  @media screen and (max-width:991px){
+  .navbar-light .navbar-toggler-icon {
+    background: url(../../assets/images/header/tab-close.svg) !important;
+    width: 26px;
+    height: 26px;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    opacity: 0.9;
+    display: block;
+  }
 
-    div#responsive-navbar-nav {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        background: #ffffff;
-        width: 300px;
-        height: auto!important;
-        display: block!important;
-        left: -350px;
-        z-index: 999999;
-        transition: all 0.5s;
-        border-right: 1px solid #f5f5f5;
-        box-shadow: 5px 5px 30px #00000033;
-    }
-    
-    div#responsive-navbar-nav.show {
-        left: 0;
-    }
-    
-    
-    .navbar-light .collapsed .navbar-toggler-icon{
-        background: url(../../assets/images/header/tab-collaps.svg)!important;
-        width: 32px;
-        height: 26px;
-        background-size: cover!important;
-        background-repeat: no-repeat!important;
-        opacity: 0.9;
-        display: block;
-    }
-        
-    .navbar-light .navbar-toggler-icon{
-        background: url(../../assets/images/header/tab-close.svg)!important;
-        width: 26px;
-        height: 26px;
-        background-size: cover!important;
-        background-repeat: no-repeat!important;
-        opacity: 0.9;
-        display: block;
-    }
-    
-    .navbar-toggler{
-        border: none!important;
-        box-shadow: none!important;
-        position: absolute;
-        right: 0;
-    }
-    
-    .search-icon {
-        margin-right: 60px;
-    }
+  .navbar-toggler {
+    border: none !important;
+    box-shadow: none !important;
+    position: absolute;
+    right: 0;
+  }
 
-    .search-icon img{
-        width: 35px;
-    }
+  .search-icon {
+    margin-right: 60px;
+  }
 
-    .header .navbar-expand-lg .navbar-nav .nav-link {
-        display: block;
-        margin: 20px 25px;
-    }
+  .search-icon img {
+    width: 35px;
+  }
 
-    }
-    
+  .header .navbar-expand-lg .navbar-nav .nav-link {
+    display: block;
+    margin: 20px 25px;
+  }
+}
