--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,56 +1,57 @@
 .header-title {
-    background: url("../../assets/images/about/Rectangle\ 25.svg") no-repeat center;
-    height: 180px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
+  background: url("../../assets/images/about/Rectangle\ 25.svg") no-repeat
+    center;
+  height: 180px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
 }
 
 .header-title .header-title-text {
-    text-align: center
+  text-align: center;
 }
 
 .header-title .container ul,
 .header-title .container li {
-    margin-bottom: 0px;
-    padding-left: 0px;
+  margin-bottom: 0px;
+  padding-left: 0px;
 }
 
 .header-title .container ul {
-    display: flex;
-    align-items: center;
-    gap: 6px;
-    margin: 0px auto;
-    max-width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin: 0px auto;
+  max-width: fit-content;
 }
 
 .header-title .container a {
-    text-decoration: none;
-    color: #889099;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+  text-decoration: none;
+  color: #889099;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .header-title .container h2 {
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 38px;
-    color: #FFFFFF;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 38px;
+  color: #ffffff;
 }
 
 .header-title .container h2 span {
-    color: #AE7D3B;
+  color: #3d68fe;
 }
 
 .header-title .container li {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    list-style: none;
-    color: #fff;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  list-style: none;
+  color: #fff;
 }
 
 /* .home-content .container {
@@ -59,246 +60,243 @@
 } */
 
 .home-content .about-grid {
-    display: flex;
-    flex-direction: row;
-    gap: 79px;
-    align-items: flex-start;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 79px;
+  align-items: flex-start;
+  width: 100%;
 }
 
 .home-content .about-cover {
-    position: relative;
-    /* width: 551px;
+  position: relative;
+  /* width: 551px;
     height: 480px; */
-    max-width: 551px;
-    width: 100%;
-    filter: drop-shadow(0px 20px 100px rgba(34, 34, 34, 0.15));
+  max-width: 551px;
+  width: 100%;
+  filter: drop-shadow(0px 20px 100px rgba(34, 34, 34, 0.15));
 }
 
 .home-content .about-cover img {
-    width: 100%;
-    height: 480px;
+  width: 100%;
+  height: 480px;
 }
 
 .home-content .about-cover span {
-    position: absolute;
-    transform: translate(-50%, 0%);
-    left: 50%;
-    bottom: -57px;
+  position: absolute;
+  transform: translate(-50%, 0%);
+  left: 50%;
+  bottom: -57px;
 }
 
 .home-content .about-cover span img {
-    height: 320px;
-    max-width: 300px;
-    width: 100%;
+  height: 320px;
+  max-width: 300px;
+  width: 100%;
 }
 
 .about-section {
-    padding: 80px 0px;
+  padding: 80px 0px;
 }
 
 .home-content .about-content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: calc(100% - 551px);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: calc(100% - 551px);
 }
 
 .home-content .about-content span {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 27px;
-    color: #889099;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #889099;
 }
 
 .home-content .about-content h2 {
-    padding-top: 10px;
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 48px;
-    color: #212121;
-    width: 291px;
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 6px;
-    padding-bottom: 16px;
-    margin-bottom: 0px;
+  padding-top: 10px;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 48px;
+  color: #212121;
+  width: 291px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 6px;
+  padding-bottom: 16px;
+  margin-bottom: 0px;
 }
 
 .home-content .about-content h2 span {
-    color: #AE7D3B;
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 48px;
+  color: #3d68fe;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 48px;
 }
 
 .home-content .about-content p {
-    border-top: 1px solid #889099;
-    padding-top: 16px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #222222;
-    opacity: 0.7;
+  border-top: 1px solid #889099;
+  padding-top: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #222222;
+  opacity: 0.7;
 }
 
 .home-content .about-product {
-    background: #FFFAF4;
-    padding: 80px 0px;
+  background: #fffaf4;
+  padding: 80px 0px;
 }
 
 .home-content .about-product-grid {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 100px;
 }
 
 .home-content .about-product-content {
-    max-width: 500px;
-    width: calc(100%-600px);
+  max-width: 500px;
+  width: calc(100%-600px);
 }
 
 .home-content .about-product .about-product-content span {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 27px;
-    color: #889099;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #889099;
 }
 
 .home-content .about-product .about-product-content h2 {
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 48px;
-    color: #212121;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 48px;
+  color: #212121;
 }
 
 .home-content .about-product .about-product-content h2 span {
-    color: #AE7D3B;
-    font-weight: 600;
-    font-size: 32px;
-    line-height: 48px;
+  color: #3d68fe;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 48px;
 }
 
 .home-content .about-product .about-product-cover img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .home-content .about-product .about-product-content p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #222222;
+  opacity: 0.7;
+}
+
+@media screen and (max-width: 991px) {
+  .home-content .about-content {
+    width: 100%;
+  }
+
+  .home-content .about-cover span img {
+    height: 100%;
+  }
+
+  .home-content .about-content p {
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #222222;
-    opacity: 0.7;
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .home-content .about-cover img {
+    height: 100%;
+  }
+
+  .home-content .about-content h2 span,
+  .home-content .about-content h2 {
+    font-size: 24px;
+    line-height: 34px;
+  }
+
+  .home-content .about-content span {
+    font-size: 14px;
+    line-height: 14px;
+  }
+
+  .home-content .about-product .about-product-content span {
+    font-size: 14px;
+    line-height: 14px;
+  }
+
+  .home-content .about-product .about-product-content h2 span,
+  .home-content .about-product .about-product-content h2 {
+    font-size: 24px;
+    line-height: 34px;
+  }
+
+  .home-content .about-product .about-product-content p {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+  }
 }
 
-@media screen and (max-width:991px) {
+@media screen and (max-width: 767px) {
+  .home-content .about-grid {
+    flex-direction: column;
+  }
 
-    .home-content .about-content {
-        width: 100%;
-    }
-
-    .home-content .about-cover span img {
-        height: 100%;
-    }
-
-    .home-content .about-content p {
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 18px;
-    }
-
-    .home-content .about-cover img {
-        height: 100%;
-    }
-
-    .home-content .about-content h2 span,
-    .home-content .about-content h2 {
-        font-size: 24px;
-        line-height: 34px;
-    }
-
-    .home-content .about-content span {
-        font-size: 14px;
-        line-height: 14px;
-    }
-
-    .home-content .about-product .about-product-content span {
-        font-size: 14px;
-        line-height: 14px;
-    }
-
-    .home-content .about-product .about-product-content h2 span,
-    .home-content .about-product .about-product-content h2 {
-        font-size: 24px;
-        line-height: 34px;
-    }
-
-    .home-content .about-product .about-product-content p {
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 18px;
-    }
+  .home-content .about-product-grid {
+    flex-direction: column;
+    gap: 60px;
+  }
 }
-
-@media screen and (max-width:767px) {
-    .home-content .about-grid {
-        flex-direction: column;
-    }
-
-    .home-content .about-product-grid {
-        flex-direction: column;
-        gap: 60px;
-
-    }
-}
-
 
 .home-pagination {
-    width: 231px;
-    height: 46px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background: #FFFFFF;
-    border: 1px solid #EEF0F3;
-    box-shadow: 0px 1px 2px rgba(42, 51, 66, 0.06);
-    border-radius: 6px;
+  width: 231px;
+  height: 46px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: #ffffff;
+  border: 1px solid #eef0f3;
+  box-shadow: 0px 1px 2px rgba(42, 51, 66, 0.06);
+  border-radius: 6px;
 }
 
 .arrowIcon {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .current-page {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    color: #AE7D3B;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: #3d68fe;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .relative-page {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #BBC3CF;
-    border-left: 1px solid #EEF0F3;
-    border-right: 1px solid #EEF0F3;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #bbc3cf;
+  border-left: 1px solid #eef0f3;
+  border-right: 1px solid #eef0f3;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
 }
