--- a/src/components/blogs/blogs.css
+++ b/src/components/blogs/blogs.css
@@ -32,7 +32,7 @@
   font-size: 18px;
   line-height: 28px;
   text-decoration: none;
-  color: #ae7d3b;
+  color: #3d68fe;
 }
 .blogs-grid-section .blogs-box a img {
   height: 13px;
@@ -70,7 +70,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  color: #ae7d3b;
+  color: #3d68fe;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -107,7 +107,7 @@
 }
 
 .blogs-pagination li.page-item.active span {
-  color: #ae7d3b;
+  color: #3d68fe;
   background: transparent;
   border: 1px solid #dee2e6;
 }
@@ -117,7 +117,6 @@
   outline: none;
   box-shadow: none;
 }
-
 
 @media screen and (max-width: 480px) {
   .blogs-grid-section {
