--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Poppins", sans-serif !important;
+  overflow-x: hidden;
+}
+
+.container {
+  max-width: 1230px !important;
+}
+
+.wrapper {
+  overflow-x: hidden;
+}
